busybox (1:1.22.0-10) UNRELEASED; urgency=low

  * lzop-add-overflow-check-CVE-2014-4607.patch (Closes: #768945)

 -- Michael Tokarev <mjt@tls.msk.ru>  Mon, 10 Nov 2014 13:59:25 +0300

busybox (1:1.22.0-9) unstable; urgency=medium

  * cherry-pick find /BITS patch from upstream (Closes: #760637)
  * clean-up provides/replaces/conflicts of busybox-syslogd from referencs
    to klogd/sysklogd/inetutils-syslogd, only keep virtual packages
    {linux-kernel,system}-log-daemon in there (Closes: #730059)
  * test for /run/systemd/system in busybox-klogd initscript and exit
    if present, to not conflict with systemd klogd functions
  * do not pass extra params to dh_installinit (using dep-based ordering)

 -- Michael Tokarev <mjt@tls.msk.ru>  Tue, 30 Sep 2014 08:50:20 +0400

busybox (1:1.22.0-8) unstable; urgency=medium

  * Team upload

  [ Michael Tokarev ]
  * iproute-support-onelink-route-option-and-print-route-flags.patch
  * udhcpc default script improvements:
    - set interface up in deconfig, which allows udhcpc to operate on
      initially down interface
    - set mtu if given
    - always use $subnet (it is always set)
    - use (linux-specific) ip applet (since udhcpc is linux-specific anyway)
    - only process one default route, since linux ignores all but the first
    - only change default route if differ from actual
    - special-case for /32 subnets, add host route to the router IP
      (used heavily in clouds and other thin provisioning environments)
      (partially Closes: #652573, for udhcpc)
    - flush routes in deconfig too
    - log messages to syslog
    - various minor cleanups
  * busybox-udeb: use ip route onlink in udhcpc script to handle /32 subnets
    (Closes: #652573)
  * update-deb-format-support.patch: patch from Guillem Jover to support
    xz format in busybox dpkg (enabled only in busybox-static)
    (same patch than the one in -7 but named differently)

 -- Christian Perrier <bubulle@debian.org>  Sun, 03 Aug 2014 12:38:57 +0200